--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>F1 Driver Wordle</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="game-container">
     <h1>F1 Driver Wordle</h1>
-    <p>Guess the F1 driver's name (5 letters):</p>
-    <input type="text" id="guess-input" maxlength="5" />
+    <p>Guess the F1 driver's last name:</p>
+    <div id="board"></div>
+    <input type="text" id="guess-input" autofocus />
     <button id="submit-btn">Submit</button>
-    <div id="feedback"></div>
     <p id="remaining-attempts">Attempts left: <span id="attempts-left">6</span></p>
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
