extra game info

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <input type="text" id="guess-input" autofocus />
     <button id="submit-btn">Submit</button>
     <p id="remaining-attempts">Attempts left: <span id="attempts-left">6</span></p>
+    <i>All drivers have raced in the 2024 season</i>
   </div>
 
   <script src="app.js"></script>
