--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>F1 Driver Wordle</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div id="game-container">
     <h1>F1 Driver Wordle</h1>
@@ -17,6 +19,26 @@
     <i>All drivers have raced in the 2024 season</i>
   </div>
 
+  <!-- win alert -->
+  <div id="win-modal" class="modal">
+    <div class="modal-content">
+      <h2>You Win!</h2>
+      <p>Congratulations, you guessed the correct F1 driver!</p>
+      <button id="win-modal-close">Close</button>
+    </div>
+  </div>
+
+  <!-- lose alert -->
+  <div id="lose-modal" class="modal">
+    <div class="modal-content">
+      <h2>Game Over!</h2>
+      <p>Sorry, you didn't guess the driver in time.</p>
+      <button id="lose-modal-close">Close</button>
+    </div>
+  </div>
+
+
   <script src="app.js"></script>
 </body>
+
 </html>
