--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <button id="no-attempts-modal-close">Close</button>
     </div>
   </div>
-
+  <a href="https://github.com/emcrald/f1-driver-wordle" class="source-code-btn" target="_blank">View Source Code</a>
   <script src="app.js"></script>
 </body>
 
