added reset button, fixed btn hover colour

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button id="submit-btn">Submit</button>
     <p id="remaining-attempts">Attempts left: <span id="attempts-left">6</span></p>
     <i>All drivers have raced in the 2024 season</i>
+    <button id="reset-btn">Reset Game</button>
   </div>
 
   <!-- win alert -->
