photo of driver now shows on win screen

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div class="modal-content">
       <h2>You Win!</h2>
       <p>Congratulations, you guessed the correct F1 driver!</p>
+      <div id="driver-info">
+        <img id="driver-photo" src="" alt="Driver Photo" />
+        <p id="driver-name"></p>
+      </div>
       <button id="win-modal-close">Close</button>
     </div>
   </div>
