new 2025 and old drivers + constructors game

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <div>
       <label for="era-select">Select Era: </label>
       <select id="era-select">
-        <option value="hybrid">2014-2024: Hybrid Era</option>
+        <option value="hybrid">2014-2025: Hybrid Era</option>
         <option value="kers">2009-2013: KERS Era</option>
         <option value="v8">2006-2008: V8 Era</option>
         <option value="v10">1997-2005: V10 Era</option>
         <option value="na">1988-1996: NA Era</option>
+        <option value="constructors">Constructors (No Spaces)</option>
       </select>
     </div>
     <div id="board"></div>
