--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <option value="v8">2006-2008: V8 Era</option>
         <option value="v10">1997-2005: V10 Era</option>
         <option value="na">1988-1996: NA Era</option>
-        <option value="constructors">Constructors (No Spaces)</option>
+        <option value="constructors">2025 Constructors</option>
       </select>
     </div>
     <div id="board"></div>
