constructors wording change

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="win-modal" class="modal">
     <div class="modal-content">
       <h2>You Win!</h2>
-      <p>Congratulations, you guessed the correct F1 driver!</p>
+      <p>Congratulations, you guessed the correct F1 driver or team!</p>
       <div id="driver-info">
         <img id="driver-photo" src="" alt="Driver Photo" />
         <p id="driver-name"></p>
@@ -48,7 +48,7 @@
   <div id="lose-modal" class="modal">
     <div class="modal-content">
       <h2>Game Over!</h2>
-      <p>Sorry, you didn't guess the driver within 6 attempts.</p>
+      <p>Sorry, you didn't guess the driver or team within 6 attempts.</p>
       <p>───</p>
       <p>The correct answer was:</p>
       <p id="answer"></p>
@@ -60,7 +60,7 @@
   <div id="invalid-length-modal" class="modal">
     <div class="modal-content">
       <h2>Invalid Name Length</h2>
-      <p>Please enter a valid F1 driver's last name between 4 and 12 letters.</p>
+      <p>Please enter a valid F1 team or driver's last name between 4 and 12 letters.</p>
       <button id="invalid-length-modal-close">Close</button>
     </div>
   </div>
